Add a new visibility option, any maximized window. With this option enabled the appmenu wil be visible whenever there is a maximized window even when it is not active or partly covered by another window. When selected the appmenu will operate on the toplevel maximized window.

--- a/plugin/CMakeLists.txt
+++ b/plugin/CMakeLists.txt
@@ -4,6 +4,7 @@ set(appmenuapplet_SRCS
     commontools.cpp
     schemecolors.cpp
     schemesmodel.cpp
+    environment.cpp
     wm/abstractwindowmanager.cpp
     wm/waylandwindowmanager.cpp
     wm/x11fallbackwindowmanager.cpp
